@@ -75,8 +75,11 @@ libbonoboui_h_sources = \
 	bonobo-zoomable-frame.h			\
 	bonobo-zoomable.h
 
+libbonoboui_2_la_LDFLAGS = \
+	-no-undefined
+
 libbonoboui_2_la_LIBADD = \
-	$(BONOBOUI_LIBS)
+	-lpopt $(BONOBOUI_LIBS)
 
 libbonoboui_2_la_SOURCES = \
 	bonobo-a11y.c				\
