@@ -14,6 +14,7 @@ AC_PROG_INTLTOOL
 AC_ISC_POSIX
 AC_PROG_CC
 AC_STDC_HEADERS
+AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 AC_PROG_YACC
 AC_PATH_PROGS(PATH_TO_XRDB, "xrdb")
